Configuraciones finales servicio SOAP